아이디 찾기, 회원가입 웹사이드 제작

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>인생 네 컷 오래오래</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="login-container">
@@ -20,12 +20,12 @@
         </form>
 
         <div class="links">
-            <button class="link-button">아이디 찾기</button>
-            <button class="link-button">비밀번호 찾기</button>
+            <button id="findIdBtn" class="link-button">아이디 찾기</button>
+            <button id="findIdBtn" class="link-button">비밀번호 찾기</button>
         </div>
 
         <div class="register">
-            <p>계정이 없으신가요? <a href="#">회원가입</a></p>
+            <p>계정이 없으신가요? <a href="#" id="signupLink">회원가입</a></p>
         </div>
 
         <div class="social-login">
@@ -37,6 +37,6 @@
             </button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
 </body>
 </html>
