프론트 업데이트 및 피드백 요청

--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 
         <div class="links">
             <button id="findIdBtn" class="link-button">아이디 찾기</button>
-            <button id="findIdBtn" class="link-button">비밀번호 찾기</button>
+            <button id="findPwBtn" class="link-button">비밀번호 찾기</button>
         </div>
 
         <div class="register">
@@ -37,6 +37,6 @@
             </button>
         </div>
     </div>
-    <script src="script1.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
