--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
-    <link rel="stylesheet" href="sign up.css">
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
     <div class="container">
@@ -23,6 +23,6 @@
         </form>
     </div>
 
-    <script src="script2.js"></script>
+    <script src="signup.js"></script>
 </body>
 </html>
